gcc/testsuite/g++.target/aarch64/sve/acle/general-c++/type_redef_13.c
/* { dg-do compile } */

struct svint8x2_t {};

#pragma GCC aarch64 "arm_sve.h" /* { dg-error {conflicting declaration 'typedef struct svint8x2_t svint8x2_t'} } */
